--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "creamyzbot",
+  "name": "deatheater",
   "description": "bot for creamy cafe",
   "version": "0.0.0",
   "main": "bot.js",
